[gd_scene load_steps=21 format=3 uid="uid://d2fspiqdcp0p1"]

[ext_resource type="Script" path="res://scenes/game/card_base.gd" id="1_gln13"]
[ext_resource type="Texture2D" uid="uid://6vtjn6xvu8je" path="res://assets/cardbacks/holo_back.png" id="2_fmpqo"]
[ext_resource type="PackedScene" uid="uid://dexwm7av1pqs6" path="res://scenes/game/card_text_info.tscn" id="3_0fe7q"]
[ext_resource type="Texture2D" uid="uid://c1lmyyd7ucqmu" path="res://assets/highlights/border_thin_pressed.png" id="3_gijux"]
[ext_resource type="Texture2D" uid="uid://yfm3tk3pgk1i" path="res://assets/highlights/card_border_highlight_selected.png" id="3_oudmd"]
[ext_resource type="Texture2D" uid="uid://bbyh2gpahtady" path="res://assets/icons/damage_counter_red.png" id="3_ugdbs"]
[ext_resource type="Texture2D" uid="uid://cgsd11ktytjvc" path="res://assets/highlights/card_border_highlight_discard_pile.png" id="4_dh5j2"]
[ext_resource type="Texture2D" uid="uid://l1rbxm47rsmf" path="res://assets/highlights/arena_border_highlight_pressed.png" id="4_ff4sg"]
[ext_resource type="Texture2D" uid="uid://bnuol0ewqd6p8" path="res://assets/highlights/card_border_highlight_pressed.png" id="4_ovykp"]
[ext_resource type="Texture2D" uid="uid://dogldee47qjtf" path="res://assets/highlights/arena_border_highlight_selected.png" id="5_1ualb"]
[ext_resource type="Texture2D" uid="uid://8edpkwpdoqn6" path="res://assets/icons/crosshair062.png" id="11_x1ffy"]
[ext_resource type="Texture2D" uid="uid://dkhi8rwbmf54j" path="res://assets/icons/musicOn.png" id="12_pe7xl"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ehge2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0l67n"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xpddh"]
bg_color = Color(0.0768358, 0.0768358, 0.0768358, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_igk3u"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wdc8e"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d7p7k"]
bg_color = Color(0.154876, 0.154876, 0.154876, 0.670588)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.603922)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_y7j06"]
bg_color = Color(0.760203, 3.70607e-06, 4.81307e-07, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.0923971, 0.0923971, 0.092397, 1)
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_m06e4"]
bg_color = Color(0, 0, 0, 0.666667)
corner_radius_top_left = 15
corner_radius_top_right = 15
corner_radius_bottom_right = 15
corner_radius_bottom_left = 15

[node name="CardBase" type="Node2D"]
script = ExtResource("1_gln13")

[node name="OuterMargin" type="MarginContainer" parent="."]
offset_left = -130.0
offset_top = -180.0
offset_right = 120.0
offset_bottom = 170.0
mouse_filter = 2

[node name="InnerMargin" type="MarginContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/InnerMargin"]
custom_minimum_size = Vector2(250, 350)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ehge2")

[node name="CardImageHolder" type="Control" parent="OuterMargin/InnerMargin/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CardImage" type="TextureRect" parent="OuterMargin/InnerMargin/PanelContainer/CardImageHolder"]
layout_mode = 2
offset_right = 250.0
offset_bottom = 350.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(125, 175)
texture = ExtResource("2_fmpqo")
expand_mode = 1

[node name="Overlay" type="VBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="HBoxContainer" type="HBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0l67n")

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CardDefLabel" type="Label" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer/PanelContainer/MarginContainer"]
layout_mode = 2
text = "CARD Def"

[node name="HBoxContainer2" type="HBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay"]
visible = false
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer2"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_0l67n")

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer2/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="CardIdLabel" type="Label" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/HBoxContainer2/PanelContainer/MarginContainer"]
layout_mode = 2
text = "CARD ID"

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 70

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay"]
layout_mode = 2
size_flags_vertical = 10
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_xpddh")

[node name="CardTextContainer" type="VBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/PanelContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
alignment = 2

[node name="CardTextInfo" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/PanelContainer/CardTextContainer" instance=ExtResource("3_0fe7q")]
modulate = Color(0.121569, 1, 1, 1)
layout_mode = 2

[node name="CardTextInfo2" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/PanelContainer/CardTextContainer" instance=ExtResource("3_0fe7q")]
layout_mode = 2

[node name="CardTextInfo3" parent="OuterMargin/InnerMargin/PanelContainer/Overlay/PanelContainer/CardTextContainer" instance=ExtResource("3_0fe7q")]
layout_mode = 2

[node name="CheerIndicators" type="VBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/InnerMargin/PanelContainer/CheerIndicators"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 60

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/InnerMargin/PanelContainer/CheerIndicators"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_igk3u")

[node name="CheerVBox" type="VBoxContainer" parent="OuterMargin/InnerMargin/PanelContainer/CheerIndicators/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 5

[node name="InfoHighlight" type="TextureRect" parent="OuterMargin"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("4_dh5j2")
expand_mode = 1

[node name="Highlight" type="TextureRect" parent="OuterMargin"]
visible = false
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_gijux")
expand_mode = 1

[node name="Button" type="TextureButton" parent="OuterMargin"]
layout_mode = 2
texture_pressed = ExtResource("4_ovykp")
texture_hover = ExtResource("3_oudmd")
ignore_texture_size = true
stretch_mode = 0

[node name="AttachmentIndicator" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/AttachmentIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 30

[node name="MarginContainer2" type="MarginContainer" parent="OuterMargin/AttachmentIndicator"]
layout_mode = 2
mouse_filter = 2

[node name="AttachmentBox" type="PanelContainer" parent="OuterMargin/AttachmentIndicator"]
layout_mode = 2
size_flags_horizontal = 4
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/AttachmentIndicator/AttachmentBox"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="OuterMargin/AttachmentIndicator/AttachmentBox/MarginContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="AttachmentIcon" type="TextureRect" parent="OuterMargin/AttachmentIndicator/AttachmentBox/MarginContainer/HBox"]
custom_minimum_size = Vector2(32, 48)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("2_fmpqo")
expand_mode = 1

[node name="x" type="Label" parent="OuterMargin/AttachmentIndicator/AttachmentBox/MarginContainer/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "x"

[node name="AttachmentCount" type="Label" parent="OuterMargin/AttachmentIndicator/AttachmentBox/MarginContainer/HBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "9"

[node name="AttachmentButton" type="TextureButton" parent="OuterMargin/AttachmentIndicator/AttachmentBox"]
layout_mode = 2
mouse_filter = 1
mouse_default_cursor_shape = 2
texture_pressed = ExtResource("4_ff4sg")
texture_hover = ExtResource("5_1ualb")
ignore_texture_size = true
stretch_mode = 0

[node name="DamageIndicator" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/DamageIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 70

[node name="HBox" type="HBoxContainer" parent="OuterMargin/DamageIndicator"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/DamageIndicator/HBox"]
custom_minimum_size = Vector2(110, 110)
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -40
theme_override_constants/margin_top = -40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="DamageIcon" type="TextureRect" parent="OuterMargin/DamageIndicator/HBox/MarginContainer"]
layout_mode = 2
mouse_filter = 2
texture = ExtResource("3_ugdbs")
expand_mode = 1

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/DamageIndicator/HBox/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = -7
theme_override_constants/margin_top = -10

[node name="CenterContainer" type="CenterContainer" parent="OuterMargin/DamageIndicator/HBox/MarginContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2

[node name="DamageLabel" type="Label" parent="OuterMargin/DamageIndicator/HBox/MarginContainer/MarginContainer/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "999"

[node name="TargetingIndicator" type="VBoxContainer" parent="OuterMargin"]
visible = false
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/TargetingIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 80

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/TargetingIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxEmpty_wdc8e")

[node name="CenterContainer" type="CenterContainer" parent="OuterMargin/TargetingIndicator/PanelContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TargetReticle" type="TextureRect" parent="OuterMargin/TargetingIndicator/PanelContainer/CenterContainer"]
modulate = Color(1, 0.223529, 0.160784, 1)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("11_x1ffy")

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/TargetingIndicator/PanelContainer/CenterContainer"]
layout_mode = 2
mouse_filter = 2

[node name="TargetDamageLabel" type="Label" parent="OuterMargin/TargetingIndicator/PanelContainer/CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 38
text = "130"

[node name="ActiveSkillIndicator" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/ActiveSkillIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 80

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/ActiveSkillIndicator"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_d7p7k")

[node name="HBoxContainer" type="HBoxContainer" parent="OuterMargin/ActiveSkillIndicator/PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = -5
alignment = 1

[node name="MusicNote" type="TextureRect" parent="OuterMargin/ActiveSkillIndicator/PanelContainer/HBoxContainer"]
modulate = Color(0.4, 1, 1, 1)
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
mouse_filter = 2
texture = ExtResource("12_pe7xl")
expand_mode = 1
stretch_mode = 5

[node name="SkillContainer" type="MarginContainer" parent="OuterMargin/ActiveSkillIndicator/PanelContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2

[node name="ActiveSkillName" type="Label" parent="OuterMargin/ActiveSkillIndicator/PanelContainer/HBoxContainer/SkillContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "i want you to be there for when i make the cool move name"
horizontal_alignment = 1
autowrap_mode = 3

[node name="TargetedDamageIndicator" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/TargetedDamageIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 230

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/TargetedDamageIndicator"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y7j06")

[node name="Label" type="Label" parent="OuterMargin/TargetedDamageIndicator/PanelContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "INCOMING DAMAGE"
horizontal_alignment = 1
autowrap_mode = 2

[node name="TargetedDownIndicator" type="VBoxContainer" parent="OuterMargin"]
layout_mode = 2
mouse_filter = 2

[node name="MarginContainer" type="MarginContainer" parent="OuterMargin/TargetedDownIndicator"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_top = 230

[node name="PanelContainer" type="PanelContainer" parent="OuterMargin/TargetedDownIndicator"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_y7j06")

[node name="Label" type="Label" parent="OuterMargin/TargetedDownIndicator/PanelContainer"]
custom_minimum_size = Vector2(225, 0)
layout_mode = 2
theme_override_font_sizes/font_size = 32
text = "GOING DOWN"
horizontal_alignment = 1
autowrap_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="."]
visible = false
offset_left = -500.0
offset_right = -130.0
offset_bottom = 135.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_m06e4")

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="NoProxyPanelContent" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
mouse_filter = 2
theme_override_constants/separation = 10

[connection signal="mouse_entered" from="OuterMargin/Button" to="." method="_on_button_mouse_entered"]
[connection signal="mouse_exited" from="OuterMargin/Button" to="." method="_on_button_mouse_exited"]
[connection signal="pressed" from="OuterMargin/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="OuterMargin/AttachmentIndicator/AttachmentBox/AttachmentButton" to="." method="_on_attachment_button_pressed"]
